# HackIITK

./: COLLEGE_SETUP.md  COMPLETED.md  server-commands.md
Project/: config.py  pyproject.toml
Project/agents/: critic.py  executor.py  orchestrator.py  planner.py
Project/api/: main.py
Project/browser/: sandbox.py
Project/defense/: dom_sanitizer.py  hitl.py  intent_schema.py  network_interceptor.py  opa_client.py  risk_scorer.py
Project/electron-shell/: main.js  preload.js
Project/electron-shell/renderer/: index.html  styles.css
Project/opa_policies/: action_validation.rego
Project/tests/: test_dom_sanitizer.py  test_opa_integration.py  test_risk_scorer.py
backend/: package-lock.json  package.json  server.js
backend-python/: .env.example  requirements.txt  run_server.py  test_agent.py  test_llm_direct.py  test_phase4.py
backend-python/app/: config.py  main.py
backend-python/app/agent/: browser_agent.py  task_llm.py
backend-python/app/database/: connection.py  repositories.py
backend-python/app/models/: schemas.py
backend-python/app/sandbox/: browser_context.py  permissions.py
backend-python/app/security/: dom_scanner.py  guard_llm.py  (+5 more)
backend-python/tests/: test_health.py
context/: MASTER_PLAN.md  PHASE_1_FOUNDATION.md  PHASE_2_DOM_SCANNER.md  PHASE_3_GUARD_LLM.md  PHASE_4_SANDBOXING.md  PHASE_5_AGENT_EVAL.md  PHASE_6_DEMO_POLISH.md  PROJECT_CONTEXT.md  SecureBrowser_Deployment_Guide.docx
electron-shell/: main.js  package-lock.json  package.json  preload.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+16 files in other folders)
